# jor-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_pt-br.md  Dockerfile  LEAN-CTX.md  LICENSE  Makefile  README.md  README_pt-br.md  build_push_deploy.sh  pyproject.toml  service.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  code-coverage.yml  release.yml
docs/: CONTRIBUTING_DOCS_EN.md  CONTRIBUTING_DOCS_PTBR.md  README.md  README_pt-br.md
docs/1-technical/: SPEC-001-v1-core.md  api-contracts.md  architecture-overview.md  architecture.md  security.md
docs/2-deployment/: cloud-providers.md  configuration-guide.md  infrastructure.md  prerequisites.md
docs/3-usage/: available-tools.md  connecting-llms.md  prompting-best-practices.md
docs/4-research-and-learnings/01-project-context/: project-journey.md
docs/4-research-and-learnings/02-pre-v1-history/: 01-spike-data-sources-and-tools.md  02-spike-auth-and-security.md  03-spike-mcp-best-practices.md  04-poc-implementation-and-outcomes.md  05-technical-mentorship-outcomes.md
docs/4-research-and-learnings/post-launch-reports/: user-experience.md
docs/en/1-technical/: api-contracts.md  architecture-overview.md  architecture.md  available-tools.md  connecting-clients.md  developer-setup.md  prompting-best-practices.md
docs/en/1-technical/integrations/: firebase-and-firestore.md  github.md  wordpress.md
docs/en/2-replication/: cloud-providers.md  configuration-and-env.md  deployment-guide.md  load-balancer-config.md  prerequisites.md
docs/en/3-history-and-specs/: README.md  learnings-and-challenges.md  methodology.md  project-timeline.md  roadmap.md  visual-identity.md
docs/en/3-history-and-specs/adrs/: 001-auth-and-security.md  002-mcp-best-practices.md  003-data-sources.md  004-poc-outcomes.md  005-mentorship-outcomes.md  006-oauth2-1-implementation-strategy.md  007-frontend-hosting-gcs.md  README.md
docs/en/3-history-and-specs/reports/: impact-case-studies.md  technical-metrics.md  user-experience.md
docs/en/3-history-and-specs/specs/: README.md  SPEC-001-v1-core.md  SPEC-002-v2-oauth-monorepo.md
docs/en/4-legal/: license.md
docs/pt-br/1-tecnico/: arquitetura.md  conectando-clientes.md  configuracao-desenvolvimento.md  contratos-api.md  ferramentas-disponiveis.md  melhores-praticas-prompt.md
docs/pt-br/1-tecnico/integracoes/: firebase-e-firestore.md  github.md  wordpress.md
docs/pt-br/2-replicacao/: configuracao-e-env.md  configuracao-load-balancer.md  guia-de-implantacao.md  pre-requisitos.md  provedores-de-nuvem.md
docs/pt-br/3-historico-e-specs/: README.md  cronograma-do-projeto.md  identidade-visual.md  roadmap.md
docs/pt-br/3-historico-e-specs/adrs/: 001-autenticacao-e-seguranca.md  002-melhores-praticas-mcp.md  003-fontes-de-dados.md  004-resultados-poc.md  005-resultados-mentoria.md  006-estrategia-implementacao-oauth2-1.md  007-hospedagem-frontend-gcs.md  README.md
docs/pt-br/3-historico-e-specs/relatorios/: estudos-de-caso-impacto.md  experiencia-do-usuario.md  metricas-tecnicas.md
docs/pt-br/3-historico-e-specs/specs/: README.md  (+1 more)
docs/pt-br/4-legal/: licenca.md
scripts/: smoke_test_rate_limit.py  smoke_test_wordpress.py
src/: app.py  config.py  http_client.py  server.py  telemetry.py  tools.py
src/api/: oauth.py
src/middleware/: auth.py  rate_limit.py
src/services/: github.py  wordpress.py
tests/: conftest.py  test_auth_middleware.py  test_github_service.py  test_http_client.py  test_oauth_router.py  test_rate_limit_middleware.py  test_server.py  test_telemetry.py  test_tools.py  test_wordpress_service.py
