[project]
name = "jor-mcp"
version = "0.1.0"
description = "Servidor MCP para a Ambiental Media"
requires-python = ">=3.12"

dependencies = [
    "fastmcp==3.0.0",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "pyjwt>=2.8.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]

[dependency-groups]
dev = [
    "ruff==0.15.5",
    "pytest>=9.0.0",
]