[project]
name = "jor-mcp"
version = "0.1.0"
description = "Servidor MCP para a Ambiental Media"
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=3.2.0",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "pyjwt>=2.12.0",
    "cryptography>=46.0.7",
    "pygments>=2.20.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.10.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff==0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["build/", "src/jor_mcp.egg-info/"]

[[tool.mypy.overrides]]
module = "src.tools"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["src/jor_mcp.egg-info/*"]

[tool.bandit]
exclude_dirs = ["tests/"]
skips = ["B104"]