[project]
name = "jor-mcp"
version = "0.4.0"
description = "Servidor MCP para a Ambiental Media"
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=3.2.0",
    "uvicorn>=0.41.0",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
    "cryptography>=48.0.1",
    "pygments>=2.20.0",
    "authlib>=1.6.11",
    "python-multipart>=0.0.31",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "firebase-admin>=7.4.0",
    "pydantic>=2.8.0",
    "google-cloud-firestore>=2.21.0",
    "urllib3>=2.7.0",
    "beautifulsoup4>=4.14.3",
    "opentelemetry-instrumentation-starlette>=0.46b0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.10.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff==0.15.5",
]

[tool.uv]
constraint-dependencies = ["joserfc>=1.6.7"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["build/", "src/jor_mcp.egg-info/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "src.tools"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["src/jor_mcp.egg-info/*"]

[tool.bandit]
exclude_dirs = ["tests/"]
skips = ["B104"]
severity = "medium"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"